docs: :memo: Add Project Doc
